refactor(authentication): update user role handling and improve signup process
 Changed UserRole enum to use simplified names (VISITOR, REGISTERED, ADMIN) without ROLE_ prefix
 Updated SecurityConfig to use hasAuthority() instead of hasRole() for role-based access
 Fixed MyUserDetailsService to use passwordHash field and handle role assignment correctly
 Modified UserController to properly redirect to login after successful signup
 Added null-checking for user roles in authentication flow
 Ensured database schema matches role enum values through migration
 Improved error handling and flash messages in registration process
 Removed redundant role prefixes from service layer